<resources>
    <string name="app_name">FarligGodt</string>
    <string name="title_activity_maps">Farlig Godt</string>
    <string name="title_activity_settings">Settings</string>
    <string name="radius">Radius: </string>
    <string name="distance_in">Distance in:</string>
    <string name="km">km</string>
    <string name="miles">Miles</string>
    <string name="nautical">Nautical miles</string>
    <string name="errorAlert">Could not load species, check your internet connection.</string>
    <string name="loadTaxon">Loading species near selected location.</string>
    <string name="loadTaxonInit">Looking for GPS-location</string>
    <string name="ok">OK</string>
    <string name="tryAgain">Try Again</string>
    <string name="back">Save</string>
    <string name="months">Months:</string>
    <string name="january">January</string>
    <string name="february">February</string>
    <string name="march">March</string>
    <string name="april">April</string>
    <string name="june">June</string>
    <string name="july">July</string>
    <string name="november">November</string>
    <string name="october">October</string>
    <string name="december">December</string>
    <string name="august">August</string>
    <string name="september">September</string>
    <string name="may">May</string>
    <string name="search">Search</string>
    <string name="filter_by_current_season">Filter by current season</string>
</resources>
