<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.example.android.farliggodtapp.Settings">


    <TextView
        android:id="@+id/radius"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/radius"
        android:textColor="#555"
        android:layout_marginBottom="10dp"
        android:textSize="24sp" />

    <TextView
        android:id="@+id/radiusNumber"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_toEndOf="@+id/radius"
        android:text=""
        android:textColor="#555"
        android:layout_marginBottom="10dp"
        android:textSize="24sp"
        tools:ignore="RtlCompat" />


    <TextView
        android:id="@+id/distance"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/radius"
        android:layout_marginBottom="10dp"
        android:layout_marginTop="40dp"
        android:text="@string/distance_in"
        android:textColor="#555"
        android:textSize="24sp" />


    <RadioGroup
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_below="@id/distance"
        android:id="@+id/distanceType">

        <RadioButton
            android:id="@+id/km"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="20dp"
            android:text="@string/km"
            android:checked="true"
            tools:ignore="RtlCompat" />

        <RadioButton
            android:id="@+id/miles"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="20dp"
            android:text="@string/miles"
            tools:ignore="RtlCompat" />

        <RadioButton
            android:id="@+id/nautical"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/nautical" />

    </RadioGroup>

    <TextView
        android:id="@+id/months"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/distanceType"
        android:layout_marginBottom="10dp"
        android:layout_marginTop="40dp"
        android:text="@string/months"
        android:textColor="#555"
        android:textSize="24sp" />

    <SeekBar
        android:id="@+id/radius_bar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/radius"
        android:layout_marginBottom="30dp" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentEnd="true"
        android:text="@string/back"
        android:onClick="openMain"
        tools:ignore="RtlCompat" />

    <CheckBox
        android:text="@string/january"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/months"
        android:layout_alignParentStart="true"
        android:id="@+id/checkBox1" />

    <CheckBox
        android:text="@string/february"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/checkBox2"
        android:layout_below="@+id/checkBox1"
        android:layout_alignParentStart="true" />

    <CheckBox
        android:text="@string/march"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/checkBox3"
        android:layout_below="@+id/checkBox2"
        android:layout_alignParentStart="true" />

    <CheckBox
        android:text="@string/april"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/checkBox4"
        android:layout_below="@+id/checkBox3"
        android:layout_alignParentStart="true" />

    <CheckBox
        android:text="@string/june"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/checkBox5"
        android:layout_alignStart="@+id/checkBox5"
        android:id="@+id/checkBox6" />

    <CheckBox
        android:text="@string/july"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/checkBox6"
        android:layout_alignStart="@+id/checkBox6"
        android:id="@+id/checkBox7" />

    <CheckBox
        android:text="@string/november"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/checkBox10"
        android:layout_alignStart="@+id/checkBox10"
        android:id="@+id/checkBox11" />

    <CheckBox
        android:text="@string/october"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/checkBox10"
        android:layout_below="@+id/checkBox9"
        android:layout_alignStart="@+id/checkBox9" />

    <CheckBox
        android:text="@string/december"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/checkBox12"
        android:layout_below="@+id/checkBox11"
        android:layout_alignStart="@+id/checkBox11" />

    <CheckBox
        android:text="@string/august"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/checkBox8"
        android:layout_below="@+id/checkBox7"
        android:layout_alignStart="@+id/checkBox7" />

    <CheckBox
        android:text="@string/september"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/checkBox9"
        android:layout_above="@+id/checkBox6"
        android:layout_alignParentEnd="true" />

    <CheckBox
        android:text="@string/may"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/checkBox5"
        android:layout_below="@+id/months"
        android:layout_toEndOf="@+id/distance"
        android:layout_marginStart="12dp" />

</RelativeLayout>
